# estudos-arquitetura-software

./: .env.example  CONTRIBUTING.md  LICENSE  Makefile  README.md  SUMMARY.md  milestones.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
docs/arquitetura/: README.md  clean-architecture.md  solid.md
docs/boas-praticas/: README.md
docs/design-patterns/: README.md
docs/fundamentos/: arquitetura-limpa.md  codigo-limpo.md  engenharia-software.md
exemplos/design-patterns/comportamentais/: strategy.py
exemplos/design-patterns/criacionais/: singleton.py
exemplos/design-patterns/estruturais/: adapter.py
exemplos/refactoring/: antes_depois.py
projetos/fastapi-project/: README.md
projetos/gurobi-refactoring/: README.md
tests/: __init__.py  test_singleton.py
